--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
 
     <!-- the floating label -->
     <string name="sheridan">Sheridan, 2019</string>
+
+    <!-- the fragment labels -->
     <string name="static_fragments">Static Fragments</string>
     <string name="input_fragment">Input Fragment</string>
     <string name="output_fragment_label">Output Fragment</string>
